[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Scene_manager.gd" type="Script" id=3]
[ext_resource path="res://World/World_1.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/World_1.tres" type="Environment" id=5]

[node name="Scene_manager" type="Spatial"]
script = ExtResource( 3 )

[node name="current_scene" type="Spatial" parent="."]

[node name="Spatial" parent="current_scene" instance=ExtResource( 4 )]

[node name="kamui_effect" type="CanvasLayer" parent="."]

[node name="Hud" parent="kamui_effect" instance=ExtResource( 2 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )

[node name="kamui_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.858575, 0.512687, 0, -0.512687, 0.858575, 0, 14.0049, 24.3313 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.465089, 0.885264, 0, -0.885264, 0.465089, 0, 18.6059, 0 )
layers = 3
shadow_enabled = true

[connection signal="timeout" from="kamui_timer" to="." method="_on_kamui_timer_timeout"]
